# supportiq

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  description.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
docs/: api-reference.md  quickstart.md
frontend/: app.py  requirements.txt  run.sh
scripts/: init-db.sql  load_demo_data.py  seed_data.py  setup.sh
src/: __init__.py  config.py  database.py  main.py
src/api/: __init__.py  agents.py  analytics.py  config_api.py  health.py  tickets.py  webhooks.py
src/integrations/: __init__.py  base.py  freshdesk.py  zendesk.py
src/models/: __init__.py  agent.py  category.py  customer.py  response.py  rule.py  ticket.py
src/schemas/: __init__.py  agent.py  category.py  common.py  customer.py  ticket.py
src/services/: __init__.py  classifier.py  priority_scorer.py  rag.py  router.py  sentiment.py
src/utils/: __init__.py  text_processing.py  validation.py
src/workers/: __init__.py  celery_app.py  tasks.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_health.py  test_api_tickets.py
tests/unit/: test_classifier.py  test_priority_scorer.py  test_text_processing.py
